--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,12 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-vertx</artifactId>
-      <exclusions>
+      <!--<exclusions>
         <exclusion>
           <groupId>io.netty</groupId>
           <artifactId>netty-codec-haproxy</artifactId>
         </exclusion>
-      </exclusions>
+      </exclusions>-->
     </dependency>
     <dependency>
       <groupId>io.smallrye.reactive</groupId>
