--- a/pom.xml
+++ b/pom.xml
@@ -51,13 +51,13 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-picocli</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
       <version>2.0.45.Final</version>
       <scope>compile</scope>
       <optional>false</optional>
-    </dependency>
+    </dependency>-->
     <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport-native-epoll</artifactId>
