--- a/pom.xml
+++ b/pom.xml
@@ -148,7 +148,7 @@
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
         <!--<quarkus.native.additional-build-args>initialize-at-run-time=io.netty.util.AbstractReferenceCounted\,io.netty.buffer.AbstractPooledDerivedByteBuf\,io.netty.buffer.PooledByteBuf\,io.netty.buffer.PooledSlicedByteBuf\,io.netty.buffer.UnpooledHeapByteBuf\,io.netty.buffer.PooledByteBufAllocator\,io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeDirectByteBuf\,io.netty.buffer.PooledUnsafeDirectByteBuf\,io.netty.buffer.UnpooledDirectByteBuf\,io.netty.buffer.AbstractReferenceCountedByteBuf\,io.netty.buffer.ByteBufAllocator\,io.netty.handler.ssl.ReferenceCountedOpenSslContext\,io.netty.buffer.ByteBufUtil\,io.netty.buffer.UnpooledUnsafeDirectByteBuf\,io.netty.channel.epoll.Epoll,io.netty.channel.epoll.EpollEventLoop\,io.netty.channel.epoll.Native\,io.netty.channel.epoll.EpollEventArray\,io.netty.channel.DefaultFileRegion\,io.netty.channel.unix.Errors</quarkus.native.additional-build-args>-->
-        <quarkus.native.additional-build-args>--initialize-at-run-time=io.netty.handler.codec.compression.BrotliOptions</quarkus.native.additional-build-args>
+        <quarkus.native.additional-build-args>--initialize-at-run-time=io.netty.handler.codec.compression.BrotliOptions\,com.infy.hackathon.HackthonQuarkusApplication</quarkus.native.additional-build-args>
       </properties>
     </profile>
   </profiles>
