--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.infy.hackathon</groupId>
   <artifactId>quarkus-wrk</artifactId>
@@ -31,48 +31,37 @@
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-netty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
-    <!--<dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy</artifactId>
-    </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-vertx</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.smallrye.reactive</groupId>
-      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-picocli</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
+    </dependency>
+    <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>2.0.45.Final</version>
       <scope>compile</scope>
       <optional>false</optional>
-    </dependency>
-    <dependency>
+    </dependency>-->
+    <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport-native-epoll</artifactId>
       <classifier>linux-x86_64</classifier>
       <scope>compile</scope>
       <optional>false</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-junit5</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.rest-assured</groupId>
-      <artifactId>rest-assured</artifactId>
-      <scope>test</scope>
-    </dependency>
+    </dependency>-->
   </dependencies>
   <build>
     <plugins>
@@ -137,37 +126,6 @@
                     <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                     <maven.home>${maven.home}</maven.home>
                   </systemPropertyVariables>
-                  <buildArgs>
-                    --no-fallback --verbose
-                    --features=org.graalvm.home.HomeFinderFeature
-
-                    --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
-                    --initialize-at-build-time=org.slf4j.impl.JDK14LoggerAdapter
-                    --initialize-at-build-time=org.slf4j.LoggerFactory
-
-                    --initialize-at-run-time=io.netty.buffer.UnpooledDirectByteBuf
-                    --initialize-at-run-time=io.netty.buffer.AbstractPooledDerivedByteBuf
-                    --initialize-at-run-time=io.netty.buffer.UnpooledHeapByteBuf
-                    --initialize-at-run-time=io.netty.handler.ssl.PemValue
-                    --initialize-at-run-time=io.netty.util.AbstractReferenceCounted
-                    --initialize-at-run-time=io.netty.handler.ssl.PemPrivateKey
-                    --initialize-at-run-time=io.netty.buffer.PooledByteBufAllocator
-                    --initialize-at-run-time=io.netty.buffer.UnpooledUnsafeDirectByteBuf
-                    --initialize-at-run-time=io.netty.buffer.ByteBufUtil
-                    --initialize-at-run-time=io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeDirectByteBuf
-                    --initialize-at-run-time=io.netty.buffer.AbstractReferenceCountedByteBuf
-                    --initialize-at-run-time=io.netty.buffer.ByteBufAllocator
-                    --initialize-at-run-time=io.netty.handler.ssl.JdkNpnApplicationProtocolNegotiator
-                    --initialize-at-run-time=io.netty.handler.ssl.OpenSsl
-                    --initialize-at-run-time=io.netty.internal.tcnative.SSL
-                    --initialize-at-run-time=io.netty.handler.ssl.ReferenceCountedOpenSslEngine
-                    --initialize-at-run-time=io.netty.internal.tcnative.CertificateVerifier
-                    --initialize-at-run-time=io.netty.util.internal.logging.Log4JLogger
-                    --initialize-at-run-time=io.netty.handler.ssl.JettyNpnSslEngine
-                    --initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ClientEngine
-                    --initialize-at-run-time=io.netty.handler.ssl.JettyAlpnSslEngine$ServerEngine
-                    --initialize-at-run-time=io.netty.handler.ssl.ConscryptAlpnSslEngine
-                  </buildArgs>
                 </configuration>
               </execution>
             </executions>
@@ -176,6 +134,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
+        <!--<quarkus.native.additional-build-args>initialize-at-run-time=io.netty.util.AbstractReferenceCounted\,io.netty.buffer.AbstractPooledDerivedByteBuf\,io.netty.buffer.PooledByteBuf\,io.netty.buffer.PooledSlicedByteBuf\,io.netty.buffer.UnpooledHeapByteBuf\,io.netty.buffer.PooledByteBufAllocator\,io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeDirectByteBuf\,io.netty.buffer.PooledUnsafeDirectByteBuf\,io.netty.buffer.UnpooledDirectByteBuf\,io.netty.buffer.AbstractReferenceCountedByteBuf\,io.netty.buffer.ByteBufAllocator\,io.netty.handler.ssl.ReferenceCountedOpenSslContext\,io.netty.buffer.ByteBufUtil\,io.netty.buffer.UnpooledUnsafeDirectByteBuf\,io.netty.channel.epoll.Epoll,io.netty.channel.epoll.EpollEventLoop\,io.netty.channel.epoll.Native\,io.netty.channel.epoll.EpollEventArray\,io.netty.channel.DefaultFileRegion\,io.netty.channel.unix.Errors</quarkus.native.additional-build-args>-->
       </properties>
     </profile>
   </profiles>
