--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,12 @@
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>2.0.44.Final</version>
+      <version>2.0.40.Final</version>
       <scope>compile</scope>
-    </dependency>
+    </dependency>-->
     <!--<dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport-native-epoll</artifactId>
