--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,6 +32,7 @@ jobs:
       with:
         files: |
           target/quarkus-wrk
+          terget/quarkus-wrk.jar
         tag_name: "0.1.0"
         prerelease: true
       env:
