--- a/pom.xml
+++ b/pom.xml
@@ -49,21 +49,9 @@
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
     </dependency>
-    <!--<dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <version>2.0.40.Final</version>
-      <scope>compile</scope>
-    </dependency>-->
-    <!--<dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport-native-epoll</artifactId>
-      <classifier>linux-x86_64</classifier>
-      <scope>compile</scope>
-      <optional>false</optional>
-    </dependency>-->
   </dependencies>
   <build>
+    <finalName>quarkus-wrk</finalName>
     <plugins>
       <plugin>
         <groupId>${quarkus.platform.group-id}</groupId>
@@ -134,7 +122,6 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
-        <!--<quarkus.native.additional-build-args>initialize-at-run-time=io.netty.util.AbstractReferenceCounted\,io.netty.buffer.AbstractPooledDerivedByteBuf\,io.netty.buffer.PooledByteBuf\,io.netty.buffer.PooledSlicedByteBuf\,io.netty.buffer.UnpooledHeapByteBuf\,io.netty.buffer.PooledByteBufAllocator\,io.netty.buffer.UnpooledByteBufAllocator$InstrumentedUnpooledUnsafeDirectByteBuf\,io.netty.buffer.PooledUnsafeDirectByteBuf\,io.netty.buffer.UnpooledDirectByteBuf\,io.netty.buffer.AbstractReferenceCountedByteBuf\,io.netty.buffer.ByteBufAllocator\,io.netty.handler.ssl.ReferenceCountedOpenSslContext\,io.netty.buffer.ByteBufUtil\,io.netty.buffer.UnpooledUnsafeDirectByteBuf\,io.netty.channel.epoll.Epoll,io.netty.channel.epoll.EpollEventLoop\,io.netty.channel.epoll.Native\,io.netty.channel.epoll.EpollEventArray\,io.netty.channel.DefaultFileRegion\,io.netty.channel.unix.Errors</quarkus.native.additional-build-args>-->
       </properties>
     </profile>
   </profiles>
