--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,9 +21,10 @@ jobs:
         distribution: 'temurin'
     - name: Build with Maven
       run: mvn -B clean package -Pnative
+    - name: Delete the previous release
     - uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
-        delete_release: true # default: false
+        delete_release: true
         tag_name: "0.1.0"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}      
