--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B clean package -Pnative
     - uses: dev-drprasad/delete-tag-and-release@v0.2.0
-    - name: Delete the previous release
+      name: Delete the previous release
       with:
         delete_release: true
         tag_name: "0.1.0"
