--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,8 +20,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B clean package -Pnative
+    - name: Build fat jar with maven
+        run: mvn -B clean package
+    - name: Build native app with maven
+      run: mvn -B package -Pnative
     - name: "List target directory"
       run: ls -altrR target/*
     - uses: dev-drprasad/delete-tag-and-release@v0.2.0
@@ -36,7 +38,7 @@ jobs:
       with:
         files: |
           target/quarkus-wrk-runner
-          target/quarkus-wrk-native-image-source-jar/quarkus-wrk-runner.jar
+          target/quarkus-wrk-runner.jar
         tag_name: "0.1.0"
         prerelease: true
       env:
