--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 quarkus.package.type=uber-jar
 quarkus.ssl.native=true
+quarkus.banner.enabled=false
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
-quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:21.3.0-java17
+#quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:21.3.0-java17
