Logger changes and format changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 quarkus.package.type=uber-jar
 quarkus.ssl.native=true
 quarkus.banner.enabled=false
+quarkus.http.host-enabled=false
+quarkus.log.category."io.quarkus".level=WARN
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:21.3.0-java17
