--- a/.github/workflows/native_windows.yml
+++ b/.github/workflows/native_windows.yml
@@ -15,9 +15,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: 'Setup GraalVM'
-      uses: DeLaGuardo/setup-graalvm@master
+      uses: DeLaGuardo/setup-graalvm@5.0
       with:
-        graalvm-version: 21.3.0
+        graalvm-version: '21.3.0'
         java: 'java17'
     - name: 'Install native-image'
       run: gu.cmd install native-image
