--- a/.github/workflows/native_windows.yml
+++ b/.github/workflows/native_windows.yml
@@ -17,8 +17,10 @@ jobs:
     - name: 'Setup GraalVM'
       uses: DeLaGuardo/setup-graalvm@5.0
       with:
-        graalvm-version: '21.3.0'
+        graalvm: '21.3.0'
         java: 'java17'
+        arch: 'amd64'
+        personal-token: ${{ secrets.GITHUB_TOKEN }}
     - name: 'Install native-image'
       run: gu.cmd install native-image
     - name: 'Print Info'
