--- a/.github/workflows/native_linux_x64.yml
+++ b/.github/workflows/native_linux_x64.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  linux-jdk17-mandrel:
     runs-on: ubuntu-latest
     permissions:
       contents: write
