--- a/.github/workflows/run_all_os.yml
+++ b/.github/workflows/run_all_os.yml
@@ -41,6 +41,13 @@ jobs:
           release_name: Release 0.1.0
           draft: true
           prerelease: true
+      - name: Push upload url to file
+        run: echo "${{ steps.create_release.outputs.upload_url }}" > upload_url.txt
+      - name: Upload upload_url artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: upload_url.txt
+          path: upload_url.txt
       - name: Set Upload URL to Environment Variable
         run: echo "upload_url=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
       - name: Upload Release Asset (Linux binary)
@@ -82,6 +89,15 @@ jobs:
       - name: 'Build Image (windows)'
         shell: cmd
         run: call "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat" && mvn --batch-mode -Pnative clean package
+      - name: Download upload_url artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: upload_url.txt
+      - name: Get upload_url
+        run: |
+          export upload_url=$(<upload_url.txt)
+          rm upload_url.txt
+          echo "upload_url=${upload_url}" >> $GITHUB_ENV
       - name: Upload Release Asset (Windows exe)
         uses: actions/upload-release-asset@v1
         with:
