--- a/.github/workflows/run_all_os.yml
+++ b/.github/workflows/run_all_os.yml
@@ -14,21 +14,11 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Build fat jar with maven
-        run: mvn -B clean package
-      - name: Build native app with maven
-        run: mvn -B package -Pnative -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
       - uses: dev-drprasad/delete-tag-and-release@v0.2.0
         name: Delete the previous release
         with:
           delete_release: true
-          tag_name: "0.1.0-linux_x64"
+          tag_name: "0.1.0"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Release
@@ -48,6 +38,16 @@ jobs:
         with:
           name: upload_url.txt
           path: upload_url.txt
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build fat jar with maven
+        run: mvn -B clean package
+      - name: Build native app with maven
+        run: mvn -B package -Pnative -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
       - name: Set Upload URL to Environment Variable
         run: echo "upload_url=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
       - name: Upload Release Asset (Linux binary)
