--- a/.github/workflows/run_all_os.yml
+++ b/.github/workflows/run_all_os.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Push upload url to file
         run: echo "${{ steps.create_release.outputs.upload_url }}" > upload_url.txt
       - name: Upload upload_url artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: upload_url.txt
           path: upload_url.txt
@@ -85,13 +85,13 @@ jobs:
       - name: 'Install native-image'
         run: gu.cmd install native-image
       - name: Download upload_url artifact
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: upload_url.txt
       - name: Get upload_url
         shell: bash
         run: |
-          export upload_url=$(<upload_url.txt)
+          export upload_url=$(cat upload_url.txt)
           rm upload_url.txt
           echo "upload_url=${upload_url}" >> $GITHUB_ENV
       - name: 'Print Info'
