--- a/.github/workflows/run_all_os.yml
+++ b/.github/workflows/run_all_os.yml
@@ -21,16 +21,14 @@ jobs:
           tag_name: "0.1.0"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create Release
+      - name: Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: "0.1.0"
-          release_name: Release 0.1.0
-          draft: true
           prerelease: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Push upload url to file
         run: echo "${{ steps.create_release.outputs.upload_url }}" > upload_url.txt
       - name: Upload upload_url artifact
