--- a/.github/workflows/run_all_os.yml
+++ b/.github/workflows/run_all_os.yml
@@ -7,6 +7,12 @@ on:
   workflow_dispatch:
 
 jobs:
+  env:
+    tag_name: 0.0.1
+    java_version: 17
+    java_version_name: java17
+    graalvm: '21.3.0'
+    mandrel_builder_image: 'quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17'
   linux-jdk17-mandrel-x64:
     runs-on: ubuntu-latest
     permissions:
@@ -18,14 +24,14 @@ jobs:
         name: Delete the previous release
         with:
           delete_release: true
-          tag_name: "0.1.0"
+          tag_name: ${{ env.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release
         id: create_release
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: "0.1.0"
+          tag_name: ${{ env.tag_name }}
           prerelease: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -39,13 +45,13 @@ jobs:
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: '17'
+          java-version: ${{ env.java_version }}
           distribution: 'temurin'
           cache: maven
       - name: Build fat jar with maven
         run: mvn -B clean package
       - name: Build native app with maven
-        run: mvn -B package -Pnative -Dquarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
+        run: mvn -B package -Pnative -Dquarkus.native.builder-image=${{ env.mandrel_builder_image }}
       - name: Set Upload URL to Environment Variable
         run: echo "upload_url=${{ steps.create_release.outputs.upload_url }}" >> $GITHUB_ENV
       - name: Upload Release Asset (Linux binary)
@@ -76,8 +82,8 @@ jobs:
       - name: 'Setup GraalVM'
         uses: DeLaGuardo/setup-graalvm@5.0
         with:
-          graalvm: '21.3.0'
-          java: 'java17'
+          graalvm: ${{ env.graalvm }}
+          java: ${{ env.java_version_name }}
           arch: 'amd64'
           personal-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Install native-image'
@@ -116,8 +122,8 @@ jobs:
       - name: 'Setup GraalVM'
         uses: DeLaGuardo/setup-graalvm@5.0
         with:
-          graalvm: '21.3.0'
-          java: 'java17'
+          graalvm: ${{ env.graalvm }}
+          java: ${{ env.java_version_name }}
           arch: 'amd64'
           platform: 'darwin'
           personal-token: ${{ secrets.GITHUB_TOKEN }}
