--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,11 @@ quarkus.ssl.native=true
 quarkus.banner.enabled=false
 quarkus.http.host-enabled=false
 quarkus.log.category."io.quarkus".level=WARN
+quarkus.log.level=INFO
+#quarkus.vertx.prefer-native-transport=true
+#quarkus.http.so-reuse-port=true
+#quarkus.http.tcp-quick-ack=true
+#quarkus.http.tcp-cork=true
+#quarkus.http.tcp-fast-open=true
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:21.3.0-java17
