--- a/pom.xml
+++ b/pom.xml
@@ -58,21 +58,22 @@
       <groupId>io.smallrye.reactive</groupId>
       <artifactId>smallrye-mutiny-vertx-core</artifactId>
     </dependency>
-    <dependency>
+    </dependency>
+-->
+   <!-- <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-tcnative-boringssl-static</artifactId>
       <version>2.0.46.Final</version>
       <scope>compile</scope>
       <optional>false</optional>
     </dependency>
--->
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-transport-native-epoll</artifactId>
       <classifier>linux-x86_64</classifier>
       <scope>compile</scope>
       <optional>false</optional>
-    </dependency>
+    </dependency>-->
   </dependencies>
   <build>
     <finalName>quarkus-wrk</finalName>
@@ -115,8 +116,8 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
-                <source>16</source>
-                <target>16</target>
+                <source>17</source>
+                <target>17</target>
             </configuration>
         </plugin>
     </plugins>
