--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,31 @@
 quarkus.package.type=uber-jar
 quarkus.ssl.native=true
 quarkus.banner.enabled=false
-quarkus.http.host-enabled=false
+#quarkus.http.host-enabled=false
 quarkus.log.category."io.quarkus".level=WARN
 quarkus.log.level=INFO
-#quarkus.vertx.prefer-native-transport=true
-#quarkus.http.so-reuse-port=true
-#quarkus.http.tcp-quick-ack=true
-#quarkus.http.tcp-cork=true
-#quarkus.http.tcp-fast-open=true
+quarkus.vertx.prefer-native-transport=true
+quarkus.http.so-reuse-port=true
+quarkus.http.tcp-quick-ack=true
+quarkus.http.tcp-cork=true
+quarkus.http.tcp-fast-open=true
+#quarkus.micrometer.export.azuremonitor.enabled=false
+quarkus.micrometer.registry-enabled-default=true
+quarkus.micrometer.binder-enabled-default=true
+quarkus.micrometer.binder.mp-metrics.enabled=true
+quarkus.resteasy.metrics.enabled=true
+# Outbound HTTP request metrics support. Support for HTTP client metrics will be enabled if Micrometer support is enabled, the REST client feature is enabled, and either this value is true, or this value is unset and quarkus.micrometer.binder-enabled-default is true.
+quarkus.micrometer.binder.http-client.enabled=true
+# Inbound HTTP metrics support. Support for HTTP server metrics will be enabled if Micrometer support is enabled, an extension serving HTTP traffic is enabled, and either this value is true, or this value is unset and quarkus.micrometer.binder-enabled-default is true.
+quarkus.micrometer.binder.http-server.enabled=true
+# Micrometer JVM metrics support. Support for JVM metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and quarkus.micrometer.binder-enabled-default is true.
+quarkus.micrometer.binder.jvm=true
+# Micrometer System metrics support. Support for System metrics will be enabled if Micrometer support is enabled, and either this value is true, or this value is unset and quarkus.micrometer.binder-enabled-default is true.
+quarkus.micrometer.binder.system=true
+# Vert.x metrics support. Support for Vert.x metrics will be enabled if Micrometer support is enabled, Vert.x MetricsOptions is on the classpath and either this value is true, or this value is unset and quarkus.micrometer.binder-enabled-default is true.
+quarkus.micrometer.binder.vertx.enabled=true
+# Support for export to Prometheus. Support for Prometheus will be enabled if Micrometer support is enabled, the PrometheusMeterRegistry is on the classpath and either this value is true, or this value is unset and quarkus.micrometer.registry-enabled-default is true.
+quarkus.micrometer.export.prometheus.enabled=true
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-mandrel:21.3.0.0-Final-java17
 #quarkus.native.builder-image=quay.io/quarkus/ubi-quarkus-native-image:21.3.0-java17
+quarkus.smallrye-metrics.micrometer.compatibility=true
