--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.infy.hackathon</groupId>
+    <groupId>com.test.quarkus.perfromance</groupId>
     <artifactId>quarkus-wrk</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
