--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ quarkus.banner.enabled=false
 quarkus.http.host-enabled=true
 quarkus.log.category."io.quarkus".level=WARN
 quarkus.log.level=INFO
+quarkus.micrometer.export.prometheus.path=/metrics
 #quarkus.vertx.prefer-native-transport=true
 #quarkus.http.so-reuse-port=true
 #quarkus.http.tcp-quick-ack=true
