--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ quarkus.package.type=uber-jar
 quarkus.ssl.native=true
 quarkus.banner.enabled=false
 quarkus.http.host-enabled=true
-quarkus.log.category."io.quarkus".level=WARN
+quarkus.log.category."io.quarkus".level=INFO
 quarkus.log.level=INFO
 quarkus.micrometer.export.prometheus.path=/metrics
 #quarkus.vertx.prefer-native-transport=true
