--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>quarkus-wrk</finalName>
+        <finalName>app</finalName>
         <plugins>
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
