--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,7 @@
             </plugin>
         </plugins>
     </build>
+    <finalName>quarkus-wrk</finalName>
     <profiles>
         <profile>
             <id>native</id>
